# stm-actor

./: .gitignore  .travis.yml  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  cabal.project  package.yaml  stack.yaml  stm-actor.cabal
.github/workflows/: haskell.yml
example/: Main.hs
src/Control/Concurrent/: Actor.hs
src/Control/Concurrent/Actor/: Prelude.hs
test/: Spec.hs  Test.hs
