cabal-version:       >=1.10
name:                stm-actor
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          samuel@simspace.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Control.Concurrent.Actor
  build-depends:       base >=4.12 && <4.15, stm >=2.1, stm-queue >=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite stm-actor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >=4.12 && <4.16,
                       stm >=2.1,
                       stm-queue >=0.1,
                       hspec >=2.7.4,
                       stm-actor
  other-extensions:    PostfixOperators, TypeApplications, BlockArguments
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -T" -O2
  default-language:    Haskell2010
